Final implementaion to calculate book price